--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -49,15 +49,15 @@
 				<h2 class="text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
-				<h3 id="center-text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
+			<div data-prog="__3" id="" class="ft-page page-7 center-text future-section future-page" data-id="__page-3">
+				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-8  future-section future-page" data-id="__page-4">
-				<h3 id="top-text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
+			<div data-prog="__4" id="" class="ft-page page-8 top-text future-section future-page" data-id="__page-4">
+				<h3 id="text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
 				<img src="a/101.jpg" alt="生活难免有风风雨雨">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-9 left-img future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-9 top-img future-section future-page" data-id="__page-5">
 				<h3 id="text-8" contenteditable="true">看到你在国护的团结和毅力</h3>
 				<img src="a/102.jpg">
 			</div>
@@ -76,8 +76,8 @@
 				<img src="a/105.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
-				<img src="a/34.jpg" alt="可是小明的爱情又在哪里呢？">
 				<h3 id="text-13" contenteditable="true">体会过你身兼数职的忙碌和责任</h3>
+				<img src="a/34.jpeg" alt="可是小明的爱情又在哪里呢？">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-14 future-section future-page" data-id="__page-4">
 				<h3 id="text-14" contenteditable="true">你真得很棒，比你想得还要棒</h3>
@@ -89,7 +89,7 @@
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-16 future-section future-page" data-id="__page-6">
 				<h3><span id="text-17" contenteditable="true">我们都拥有理想</span><br><span id="text-18" contenteditable="true">目标明确</span></h3>
-				<img src="a/55.jpg">
+				<img src="a/55.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
 				<h3 id="text-19" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
@@ -107,29 +107,29 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
 				<h3 id="text-22" contenteditable="true">我们都在不断地了解自己，认可自己</h3>
-				<img src="a/36.jpg">
+				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
 				<h3 id="text-23" contenteditable="true">我们在并肩成长。</h3>
-				<img src="a/51.jpg">
+				<img src="a/51.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-22 future-section future-page" data-id="__page-5">
 				<h3 id="text-24" contenteditable="true">感谢你出现在这个世上，让我相信一切美好。</h3>
-				<img src="a/45.jpg">
+				<img src="a/45.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-23 future-section future-page" data-id="__page-6">
 				<h3 id="text-25" contenteditable="true">希望你的笑容永远像小时候那样天真可爱</h3>
-				<img src="a/44.jpg">
+				<img src="a/44.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-24 future-section future-page" data-id="__page-7">	
 				<h3 id="text-26" contenteditable="true">愿你在好看的道路上越走越远，永无止境。</h3>
-				<img src="a/26.jpg">
+				<img src="a/26.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__5" class="ft-section section-5" data-id="__section-5">
 			<div data-prog="__1" id="" class="ft-page page-25 future-section" data-id="__page-1">
 				<h3><span id="text-27" contenteditable="true">在你到来的19岁</span><br><span id="text-28" contenteditable="true">我把所有的祝福都给你</span></h3>
-				<img src="a/62.jpeg">
+				<img src="a/62.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-29" contenteditable="true">希望你每天清晨醒来，都能再赖一会儿床</h3>
@@ -137,9 +137,9 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-27 future-section future-page" data-id="__page-3">
 				<h3 id="text-30" contenteditable="true">希望你洗漱的时候水温正好，牙膏洗面奶不多不少</h3>
-				<img src="a/8.jpeg">
+				<img src="a/8.jpg">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-28 future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-28 top-text center-img future-section future-page" data-id="__page-4">
 				<h3 id="text-31" contenteditable="true">希望你一出门阳光刺眼，微风不燥</h3>
 				<img src="a/49.jpeg">
 			</div>
@@ -147,7 +147,7 @@
 				<h3 id="text-32" contenteditable="true">希望你排队打饭的队伍刚好是最快的队伍</h3>
 				<img src="a/25.jpeg">
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-30 future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-30 center-img future-section future-page" data-id="__page-6">
 				<h3 id="text-33" contenteditable="true">希望你打的饭阿姨都因为你的笑容和美丽多给你些</h3>
 				<img src="a/27.jpeg">
 			</div>
@@ -159,13 +159,13 @@
 		<div id="" data-prog="__6" class="ft-section section-6" data-id="__section-6">
 			<div data-prog="__1" id="" class="ft-page page-32 future-section" data-id="__page-1">
 				<h3 id="text-35" contenteditable="true">希望你答题顺利，做的都对</h3>
-				<img src="a/19.jpeg">
+				<img src="a/19.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-33 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-36" contenteditable="true">希望你偶尔犯困都不被老师发现</h3>
 				<img src="a/30.jpeg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-34 future-section future-page" data-id="__page-3">
 				<h3 id="text-37" contenteditable="true">希望你吃饭的时候刚好有座</h3>
 				<img src="a/17.jpg">
 			</div>
@@ -173,8 +173,8 @@
 				<h3><span id="text-38" contenteditable="true">希望你不小心丢失的东西自己冒出来</span><br><span id="text-39" contenteditable="true">希望你你没带钥匙的时候宿舍刚好有人</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/31.jpeg">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-36 future-section future-page" data-id="__page-5">
-				<h3 id="bottom-text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
+			<div data-prog="__5" id="" class="ft-page page-36 center-text future-section future-page" data-id="__page-5">
+				<h3 id="text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
 				<img src="a/32.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-37 future-section future-page" data-id="__page-6">
@@ -191,11 +191,11 @@
 				<h3 id="text-44" contenteditable="true">希望你吃进去的东西都成了快乐而不是肉</h3>
 				<img src="a/35.jpeg">
 			</div>
-			<div data-prog="__2" id="" class="ft-page page-40 future-section future-page" data-id="__page-2">
+			<div data-prog="__2" id="" class="ft-page page-40 center-img future-section future-page" data-id="__page-2">
 				<h3 id="text-45" contenteditable="true">希望你圆满完成自己的小目标</h3>
 				<img src="a/36.jpeg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-41 future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-41 center-img future-section future-page" data-id="__page-3">
 				<img src="a/46.jpeg" class="img1">
 				<h3 id="text-46" contenteditable="true">希望你期待的事都有一个比你想象中还好的结果</h3>
 			</div>
@@ -227,7 +227,7 @@
 				</h3>
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
-				<img src="a/14.jpeg">
+				<img src="a/14.jpg">
 				<h3>
 					<span id="text-58" contenteditable="true">愿你的心灵纯净永远。</span>
 					<span id="text-59" contenteditable="true">前途光明，生活美满。</span>
@@ -243,10 +243,10 @@
 				<p class="text">
 					<span class="text" id="text-64" contenteditable="true">愿生活里有热汤和甜食。</span><br>
 					<span class="text" id="text-65" contenteditable="true">内心里有诗和远方。</span>
-					<img src="a/48.jpeg">
+					<img src="a/26.jpeg">
 				</p>
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-50 center-img future-section future-page" data-id="__page-5">
 				<p class="text" id="text-66" contenteditable="true">想你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
 				<img src="a/48.jpeg" class="img1">
 			</div>
@@ -269,7 +269,7 @@
 				<h3 id="text-72" contenteditable="true">一直有我</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<img src="a/15.jpeg" alt="happy birthday">
+				<img src="a/15.jpg" alt="happy birthday">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/57.jpeg">
