--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -49,11 +49,11 @@
 				<h2 class="text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-7 center-text future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
 				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-8 top-text future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-8 future-section future-page" data-id="__page-4">
 				<h3 id="text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
 				<img src="a/101.jpg" alt="生活难免有风风雨雨">
 			</div>
@@ -71,7 +71,7 @@
 				<h3 id="text-10" contenteditable="true">知晓你跳健美操的辛苦与不易</h3>
 				<img src="a/104.jpg">
 			</div>
-			<div data-prog="__2" id="" class="ft-page page-12  center-img future-section future-page" data-id="__page-2">
+			<div data-prog="__2" id="" class="ft-page page-12 future-section future-page" data-id="__page-2">
 				<h3><span id="text-11" contenteditable="true">看过你参加的各类演讲比赛</span><br><span id="text-12" contenteditable="true">朗诵比赛</span></h3>
 				<img src="a/105.jpg">
 			</div>
@@ -105,7 +105,7 @@
 				<h3 id="text-21" contenteditable="true">我们都积极，阳光，自信，向上。</h3>
 				<img src="a/16.jpg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-20 center-img future-section future-page" data-id="__page-3">
 				<h3 id="text-22" contenteditable="true">我们都在不断地了解自己，认可自己</h3>
 				<img src="a/36.jpeg">
 			</div>
@@ -139,7 +139,7 @@
 				<h3 id="text-30" contenteditable="true">希望你洗漱的时候水温正好，牙膏洗面奶不多不少</h3>
 				<img src="a/8.jpg">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-28 top-text center-img future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-28 center-img future-section future-page" data-id="__page-4">
 				<h3 id="text-31" contenteditable="true">希望你一出门阳光刺眼，微风不燥</h3>
 				<img src="a/49.jpeg">
 			</div>
@@ -196,8 +196,8 @@
 				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-41 center-img future-section future-page" data-id="__page-3">
-				<img src="a/46.jpeg" class="img1">
 				<h3 id="text-46" contenteditable="true">希望你期待的事都有一个比你想象中还好的结果</h3>
+				<img src="a/46.jpeg" class="img1">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
 				<h3><span id="text-47" contenteditable="true">希望你学习努力，每天进步</span><br><span id="text-48" contenteditable="true">积极向上，快乐永远</span></h3>
@@ -226,16 +226,16 @@
 					<span id="text-57" contenteditable="true">愿你知足</span>
 				</h3>
 			</div>
-			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
+			<div data-prog="__2" id="" class="ft-page page-47 top-text right-img future-section future-page" data-id="__page-2">
 				<img src="a/14.jpg">
 				<h3>
 					<span id="text-58" contenteditable="true">愿你的心灵纯净永远。</span>
 					<span id="text-59" contenteditable="true">前途光明，生活美满。</span>
 					<span id="text-60" contenteditable="true">愿你的笑容灿烂永远。</span>
-					<span id="text-61" contenteditable="true">前路平坦，此生绚烂。</span></h3>
-				
+					<span id="text-61" contenteditable="true">前路平坦，此生绚烂。</span>
+				</h3>		
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-48 left-img future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-48 future-section future-page" data-id="__page-3">
 				<p><span id="text-62" contenteditable="true">去做光芒万丈，不枉众生喜欢，活成你想要的模样。</span><br><span id="text-63" contenteditable="true">去做灿烂星光，负责众人仰望，追寻你自己的理想。</span></p>
 				<img src="a/29.jpeg">
 			</div>
@@ -243,11 +243,11 @@
 				<p class="text">
 					<span class="text" id="text-64" contenteditable="true">愿生活里有热汤和甜食。</span><br>
 					<span class="text" id="text-65" contenteditable="true">内心里有诗和远方。</span>
-					<img src="a/26.jpeg">
 				</p>
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 center-img future-section future-page" data-id="__page-5">
-				<p class="text" id="text-66" contenteditable="true">想你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
+				<span id="text-66" contenteditable="true">想你的周围充满给予你喜欢，</span>
+				<span id="text-66" contenteditable="true">温暖，陪伴，理解与包容的人。</span>
 				<img src="a/48.jpeg" class="img1">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
