--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -45,11 +45,11 @@
 				<h2 class="center-text" id="text-4" contenteditable="true">你的18岁依旧耀眼出色，让人心底高兴</h2>
 				<img src="a/21.jpg" alt="见证">
 			</div>
-			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
+			<div data-prog="__2" id="" class="ft-page page-6 center-img future-section future-page" data-id="__page-2">
 				<h2 class="text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-7  center-text future-section future-page" data-id="__page-3">
 				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
@@ -107,7 +107,6 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 center-img future-section future-page" data-id="__page-3">
 				<h3 id="text-22" contenteditable="true">我们都在不断地了解自己，认可自己</h3>
-				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
 				<h3 id="text-23" contenteditable="true">我们在并肩成长。</h3>
@@ -141,7 +140,6 @@
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-28 center-img future-section future-page" data-id="__page-4">
 				<h3 id="text-31" contenteditable="true">希望你一出门阳光刺眼，微风不燥</h3>
-				<img src="a/49.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-29 future-section future-page" data-id="__page-5">
 				<h3 id="text-32" contenteditable="true">希望你排队打饭的队伍刚好是最快的队伍</h3>
@@ -201,7 +199,7 @@
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
 				<h3><span id="text-47" contenteditable="true">希望你学习努力，每天进步</span><br><span id="text-48" contenteditable="true">积极向上，快乐永远</span></h3>
-				<img src="39.jpeg">
+				<img src="a/39.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-43 future-section future-page" data-id="__page-5">
 				<img src="a/13.jpg">
@@ -246,8 +244,7 @@
 				</p>
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 center-img future-section future-page" data-id="__page-5">
-				<span id="text-66" contenteditable="true">想你的周围充满给予你喜欢，</span>
-				<span id="text-66" contenteditable="true">温暖，陪伴，理解与包容的人。</span>
+				<p><span id="text-62" contenteditable="true">想你的周围充满给予你喜欢，</span><br><span id="text-63" contenteditable="true">温暖，陪伴，理解与包容的人。</span></p>
 				<img src="a/48.jpeg" class="img1">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
