--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -55,7 +55,6 @@
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-8 future-section future-page" data-id="__page-4">
 				<h3 id="text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
-				<img src="a/101.jpg" alt="生活难免有风风雨雨">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-9 top-img future-section future-page" data-id="__page-5">
 				<h3 id="text-8" contenteditable="true">看到你在国护的团结和毅力</h3>
@@ -143,11 +142,10 @@
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-29 future-section future-page" data-id="__page-5">
 				<h3 id="text-32" contenteditable="true">希望你排队打饭的队伍刚好是最快的队伍</h3>
-				<img src="a/25.jpeg">
+				<img src="a/49.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-30 center-img future-section future-page" data-id="__page-6">
 				<h3 id="text-33" contenteditable="true">希望你打的饭阿姨都因为你的笑容和美丽多给你些</h3>
-				<img src="a/27.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-31 future-section future-page" data-id="__page-7">
 				<h3 id="text-34" contenteditable="true">希望你听讲认真，学得都会</h3>
@@ -165,7 +163,7 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 future-section future-page" data-id="__page-3">
 				<h3 id="text-37" contenteditable="true">希望你吃饭的时候刚好有座</h3>
-				<img src="a/17.jpg">
+				<img src="a/46.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
 				<h3><span id="text-38" contenteditable="true">希望你不小心丢失的东西自己冒出来</span><br><span id="text-39" contenteditable="true">希望你你没带钥匙的时候宿舍刚好有人</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
@@ -193,11 +191,10 @@
 				<h3 id="text-45" contenteditable="true">希望你圆满完成自己的小目标</h3>
 				<img src="a/36.jpeg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-41 center-img future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-41 future-section future-page" data-id="__page-3">
 				<h3 id="text-46" contenteditable="true">希望你期待的事都有一个比你想象中还好的结果</h3>
-				<img src="a/46.jpeg" class="img1">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-42 center-img future-section future-page" data-id="__page-4">
 				<h3><span id="text-47" contenteditable="true">希望你学习努力，每天进步</span><br><span id="text-48" contenteditable="true">积极向上，快乐永远</span></h3>
 				<img src="a/39.jpeg">
 			</div>
@@ -211,7 +208,7 @@
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-45 future-section future-page" data-id="__page-7">
 				<h3><span id="text-52" contenteditable="true">愿你抬头就能看见繁星陪伴</span><br><span id="text-53" contenteditable="true">愿你低头就能闻见花草纷纷</span></h3>
-				<img src="a/53.jpeg">
+				<img src="a/36.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__8" class="ft-section section-8" data-id="__section-8">
@@ -251,8 +248,8 @@
 				<p>
 					<span id="text-67" contenteditable="true">左右，我都希望你是全天下最快乐的。</span><br>
 					<span id="text-68" contenteditable="true">左右，你做什么我都是支持和肯定的。</span><br>
-					<span id="text-69" contenteditable="true">。</span><br>
-					<span id="text-70" contenteditable="true">。</span>
+					<span id="text-69" contenteditable="true">你的快乐我比我自己还要快乐。</span><br>
+					<span id="text-70" contenteditable="true">我的快乐想加倍都送给你。</span>
 					</p>
 			</div>
 		</div>
