--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -47,7 +47,6 @@
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 center-img future-section future-page" data-id="__page-2">
 				<h2 class="text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
-				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-7  center-text future-section future-page" data-id="__page-3">
 				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
@@ -244,13 +243,14 @@
 				<p><span id="text-62" contenteditable="true">想你的周围充满给予你喜欢，</span><br><span id="text-63" contenteditable="true">温暖，陪伴，理解与包容的人。</span></p>
 				<img src="a/48.jpeg" class="img1">
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-51 right-img future-section future-page" data-id="__page-6">
 				<p>
 					<span id="text-67" contenteditable="true">左右，我都希望你是全天下最快乐的。</span><br>
 					<span id="text-68" contenteditable="true">左右，你做什么我都是支持和肯定的。</span><br>
 					<span id="text-69" contenteditable="true">你的快乐我比我自己还要快乐。</span><br>
 					<span id="text-70" contenteditable="true">我的快乐想加倍都送给你。</span>
-					</p>
+				</p>
+				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
 		</div>
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
