--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -263,7 +263,7 @@
 				<h3 id="text-72" contenteditable="true">一直有我</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<img src="a/15.jpg" alt="happy birthday">
+				<img src="a/a.jpg" alt="happy birthday">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/520.jpg">
