--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -268,8 +268,8 @@
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/520.jpg">
 				<p class="text">
-					<span id="text-73" contenteditable="true">生日快乐，我的人间理想。</span><br>
-					<span id="text-74" contenteditable="true">天天快乐，你是心之所向。</span><br>
+					<span id="text-73" contenteditable="true">生日快乐，最美的姑娘。</span><br>
+					<span id="text-74" contenteditable="true">天天快乐，最好的佳璇。</span><br>
 					<br>
 					<br>
 					
